# uuBot

./: .env.example  .gitignore  Cargo.toml  README.md  api.md  build.sh  deploy.sh
.github/workflows/: build.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppShell.tsx  ThemeToggle.tsx  UserShell.tsx  brand.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/lib/: api.ts  auth.ts  theme.tsx
frontend/src/pages/: AdminLoginPage.tsx  AdminPage.tsx  BotPage.tsx  LoginPage.tsx  SettingsPage.tsx  WordsPage.tsx
src/: auth.rs  codes.rs  config.rs  db.rs  embed.rs  error.rs  main.rs  state.rs
src/entities/: admins.rs  bot_conversations.rs  bot_messages.rs  email_codes.rs  mod.rs  settings.rs  users.rs  words.rs  wx_bindings.rs
src/routes/: admin.rs  auth.rs  bot.rs  me.rs  mod.rs  words.rs
src/services/: ai.rs  bot.rs  dictionary.rs  email.rs  mapay.rs  mod.rs  settings.rs
